--- a/GoooodProject/GoooodProject.csproj
+++ b/GoooodProject/GoooodProject.csproj
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <None Update="unicorn.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
